--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ BODY {
  background-color: white; 
  font-family: arial, helvetica, ariel, sans-serif;
  color: black;
+ font-size: 20px;
 }
 
 .annons {
@@ -27,7 +28,8 @@ BODY {
  border-bottom: 1px solid black;
  font-family: arial, helvetica, ariel, sans-serif;
  color: #000000;
- font-size: 120%;
+ font-size: 140%;
+ margin-top: 5px;
  padding-left: 5px;
 }
 
